fix: add z-index to header

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,7 @@ body {
   width: 100%;
   padding-top: 38px;
   transition: background-color 0.5s linear;
+  z-index: 1;
 }
 
 .header:hover {
